[package]
name = "tiled_json"
version = "0.1.0"
authors = ["jpgadoury01"]
edition = "2018"
homepage = "https://github.com/jpgadoury01/tiled_json-rs"
repository = "https://github.com/jpgadoury01/tiled_json-rs"
description = "A helper library to load JSON-formatted Tiled maps."
readme = "README.md"
license = "MIT"
keywords = ["tile", "json", "map", "2d", "gamedev"]
categories = ["encoding","game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde      = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
flate2     = "1.0.14"
base64     = "0.12.0"


